testData/diagnostics/need_space_after_hex.diag.txt
testData/diagnostics/need_space_after_hex.nut line = (2) column = (9) : error: expected hex digits after '0x'
let x = 123
println([0xx][1])
         ^-

